Absolute header on mobile to fix fixed position bug

--- a/htdocs/assets/scss/core/_modules.scss
+++ b/htdocs/assets/scss/core/_modules.scss
@@ -292,6 +292,7 @@ img.media__img {
 	background-color: $color-brand-dark;
 	@include respond-max($bp1) {
 		margin-bottom: 1.5em;
+		position: absolute;
 	}
 }
 
